Fixed navbar item spacing

--- a/frontend/src/styles/notification.css
+++ b/frontend/src/styles/notification.css
@@ -1,11 +1,8 @@
 .person-name {
-  color: #4faf4e;
-}
+  color: #4FAF4E; }
 
 .time {
-  color: #484848;
-}
+  color: #484848; }
 
 .notif-description {
-  color: #484848;
-}
+  color: #484848; }
